--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
   </head>
   <body>
     <h1>Welcome to the french poem</h1>
+    <footer>
+      This AI project was coded by
+      <a href="https://github.com/Ami0480" target="_blank">Ami Fukuyama</a> and
+      is
+      <a href="https://github.com/Ami0480/french-poem-generator" target="_blank"
+        >open-sourced on GitHub</a
+      >and is hosted on
+      <a
+        href="https://french-poem-generator-practice.netlify.app/"
+        target="_blank"
+        >Netlify</a
+      >.
+    </footer>
     <script src="js/index.js"></script>
   </body>
 </html>
