--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       is
       <a href="https://github.com/Ami0480/french-poem-generator" target="_blank"
         >open-sourced on GitHub</a
-      >and is hosted on
+      >and is
       <a
         href="https://french-poem-generator-practice.netlify.app/"
         target="_blank"
-        >Netlify</a
+        >hosted on Netlify</a
       >.
     </footer>
     <script src="js/index.js"></script>
