added basic html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
     <title>french poem</title>
   </head>
   <body>
-    <h1>Welcome to the french poem</h1>
+    <h1>French poem generator</h1>
+
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Please put a topic of french poem..."
+          outfocus
+          required
+          autocomplete="
+          off"
+        />
+        <input type="submit" />
+      </form>
+      <div>
+        The poem will go here
+        <br />
+        The poem will go here
+      </div>
+    </main>
     <footer>
       This AI project was coded by
       <a href="https://github.com/Ami0480" target="_blank">Ami Fukuyama</a> and
