--- a/index.html
+++ b/index.html
@@ -8,39 +8,44 @@
     <title>french poem</title>
   </head>
   <body>
-    <h1>French poem generator</h1>
+    <div class="container">
+      <h1>French poem generator</h1>
 
-    <main>
-      <form>
-        <input
-          type="text"
-          placeholder="Please put a topic of french poem..."
-          outfocus
-          required
-          autocomplete="
+      <main>
+        <form>
+          <input
+            type="text"
+            placeholder="Please put a topic of french poem..."
+            outfocus
+            required
+            autocomplete="
           off"
-        />
-        <input type="submit" />
-      </form>
-      <div>
-        The poem will go here
-        <br />
-        The poem will go here
-      </div>
-    </main>
-    <footer>
-      This AI project was coded by
-      <a href="https://github.com/Ami0480" target="_blank">Ami Fukuyama</a> and
-      is
-      <a href="https://github.com/Ami0480/french-poem-generator" target="_blank"
-        >open-sourced on GitHub</a
-      >and is
-      <a
-        href="https://french-poem-generator-practice.netlify.app/"
-        target="_blank"
-        >hosted on Netlify</a
-      >.
-    </footer>
+            class="instructions"
+          />
+          <input type="submit" class="submit-button" />
+        </form>
+        <div class="poem">
+          The poem will go here
+          <br />
+          The poem will go here
+        </div>
+      </main>
+      <footer>
+        This AI project was coded by
+        <a href="https://github.com/Ami0480" target="_blank">Ami Fukuyama</a>
+        and is
+        <a
+          href="https://github.com/Ami0480/french-poem-generator"
+          target="_blank"
+          >open-sourced on GitHub</a
+        >and is
+        <a
+          href="https://french-poem-generator-practice.netlify.app/"
+          target="_blank"
+          >hosted on Netlify</a
+        >.
+      </footer>
+    </div>
     <script src="js/index.js"></script>
   </body>
 </html>
